[project]
name = "petrovich"
version = "0.1.0"
description = "Чат-бот"
authors = [
    { name = "Xoma163", email = "Xoma163rus@gmail.com" },
]
readme = "README.md"
repository = "https://github.com/Xoma163/petrovich"
package-mode = false
license = "MIT"
requires-python = ">=3.14"

dependencies = [
    "audioop-lts>=0.2.2",
    "beautifulsoup4>=4.14.3",
    "colorlog>=6.10.1",
    "crontab>=1.0.5",
    "cryptography>=46.0.3",
    "django>=6.0.1",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-redis>=6.0.0",
    "django-stubs>=5.2.9",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "psycopg2>=2.9.11",
    "pydub>=0.25.1",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "sentry-sdk>=2.50.0",
    "twitch-dl>=3.3.0",
    "uwsgi>=2.0.31",
    "xmltodict>=1.0.2",
    "yandex-music>=2.2.0",
    "yt-dlp>=2025.12.8",
]
