[project]
name = "petrovich"
version = "0.1.0"
description = "Чат-бот"
authors = [
    { name = "Xoma163", email = "Xoma163rus@gmail.com" },
]
readme = "README.md"
repository = "https://github.com/Xoma163/petrovich"
package-mode = false
license = "MIT"
requires-python = ">=3.14"

dependencies = [
    "audioop-lts>=0.2.2",
    "beautifulsoup4>=4.14.3",
    "colorlog>=6.10.1",
    "crontab>=1.0.5",
    "cryptography>=46.0.6",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-redis>=6.0.0",
    "django-stubs>=6.0.2",
    "lxml>=6.0.2",
    "markdown-it-py[linkify,plugins]>=4.0.0",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "psycopg2>=2.9.11",
    "pydub>=0.25.1",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.1.0",
    "requests>=2.33.1",
    "selenium>=4.41.0",
    "sentry-sdk>=2.57.0",
    "telegramify-markdown>=1.1.1",
    "twitch-dl>=3.3.1",
    "gunicorn>=25.3.0",
    "xmltodict>=1.0.4",
    "yandex-music>=2.2.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "add-trailing-comma>=4.0.0",
    "types-requests>=2.33.0.20260402",
]

[tool.ruff]
target-version = "py314"
line-length = 120
force-exclude = true
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "**/migrations",
    "media",
    "static",
    "staticfiles",
]

[tool.ruff.lint]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
disable_error_code = ["union-attr"]
implicit_optional = true
exclude = [
    ".*[\\/]migrations[\\/].*",
    "^media/",
    "^static/",
    "^staticfiles/",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "apps.bot.models",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "petrovich.settings"
